[tool.poetry]
name = "terminus-python-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycspr = {git = "https://github.com/casper-network/casper-python-sdk", rev = "main"}
pytest = "^8.1.1"
pytest-bdd = "^7.1.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
